Add gitignore and better readme

--- a/UmbracoMember2FA.Web/appsettings.json
+++ b/UmbracoMember2FA.Web/appsettings.json
@@ -26,7 +26,11 @@
         "ModelsMode": "SourceCodeAuto"
       },
       "Unattended": {
-        "UpgradeUnattended": true
+        "UpgradeUnattended": true,
+        "InstallUnattended": true,
+        "UnattendedUserName": "Admin",
+        "UnattendedUserEmail": "admin@example.com",
+        "UnattendedPassword": "1234567890"
       },
       "Security": {
         "AllowConcurrentLogins": false
